--- a/UpperAirwayCycleGAN.ipynb
+++ b/UpperAirwayCycleGAN.ipynb
@@ -81,7 +81,7 @@
     "Use your own normalized dataset from the open source multispeaker dataset (https://figshare.com/articles/dataset/A_multispeaker_dataset_of_raw_and_reconstructed_speech_production_real-time_MRI_video_and_3D_volumetric_images/13725546/1) creating the appropriate folders and adding in the images.\n",
     "\n",
     "-   Create a dataset folder under `/dataset` for your dataset.\n",
-    "-   Create subfolders `testA`, `testB`, `trainA`, and `trainB` under your dataset's folder. Place any images you want to transform from a to b (cat2dog) in the `testA` folder, images you want to transform from b to a (dog2cat) in the `testB` folder, and do the same for the `trainA` and `trainB` folders."
+    "-   Create subfolders `testA`, `testB`, `trainA`, and `trainB` under your dataset's folder. Place any images you want to transform from a to b (T1toT2) in the `testA` folder, images you want to transform from b to a (T2toT1) in the `testB` folder, and do the same for the `trainA` and `trainB` folders."
    ]
   },
   {
